[package]
name = "steamidfx"
version = "1.0.0"
authors = ["Victor Polevoy <fx@thefx.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
error-chain = "0.12"
regex = "1"

[dependencies.serde]
version = "1"
optional = true

[dependencies.serde-aux]
version = "2"
optional = true

[dev-dependencies.serde_json]
version = "1"

[features]
default = ["serialization"]
serialization = ["serde", "serde-aux"]