[package]
name = "steamidfx"
version = "2.1.0"
authors = ["Victor Polevoy <fx@thefx.co>"]
edition = "2018"
description = "Work with steam id easily"
readme = "README.md"
license = "MIT"
keywords = ["steam", "steamid", "id"]
repository = "https://github.com/iddm/steamidfx"
documentation = "https://docs.rs/steamidfx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
error-chain = "0.12"
regex = "1"

[dependencies.serde]
version = "1"
optional = true

[dependencies.serde-aux]
version = "4"
optional = true

[dev-dependencies.serde_json]
version = "1"

[features]
default = ["serialization"]
serialization = ["serde", "serde-aux"]
